[project]
name = "automl-research"
version = "0.1.0"
description = "Autonomous traditional ML research agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "imbalanced-learn>=0.12.0",
    "optuna>=3.5.0",
    "sentence-transformers>=2.2.0",
    "pyarrow>=14.0.0",
    "openpyxl>=3.1.0",
    "kaggle>=1.7.0",
]
